--- a/todoList.html
+++ b/todoList.html
@@ -7,7 +7,9 @@
 
     <body>
         <script>
-            let todos = ['Item 1', 'Item 2', 'Item 3']
+            let todos = ['Item 1', 'Item 2', 'Item 3'];
+
+            console.log(todos);
         </script>
     </body>
 </html>
