--- a/todoList.html
+++ b/todoList.html
@@ -10,6 +10,10 @@
             let todos = ['Item 1', 'Item 2', 'Item 3'];
 
             console.log(todos);
+
+            todos.push('Item 4');
+
+            console.log(todos);
         </script>
     </body>
 </html>
