Add a way to edit todos (todos[elementNumber])

--- a/todoList.html
+++ b/todoList.html
@@ -14,6 +14,10 @@
             todos.push('Item 4');
 
             console.log(todos);
+
+            todos[0] = 'Item 1: Edited';
+
+            console.log(todos);
         </script>
     </body>
 </html>
