Add a way to delete a todo (splice)

--- a/todoList.html
+++ b/todoList.html
@@ -18,6 +18,10 @@
             todos[0] = 'Item 1: Edited';
 
             console.log(todos);
+
+            todos.splice(0, 1);
+
+            console.log(todos);
         </script>
     </body>
 </html>
