Add function to edit todo. Add function to remove todo

--- a/todoList.html
+++ b/todoList.html
@@ -16,13 +16,21 @@
 
       add('another item');
 
-      todos[0] = 'Item 1: Edited';
+      function edit(itemPosition, newItem) {
+        todos[itemPosition] = newItem;
+        console.log(todos);
+      }
 
-      console.log(todos);
+      edit(0, 'edited item');
 
-      todos.splice(0, 1);
+      function remove(itemPosition) {
+        todos.splice(itemPosition, 1);
+        console.log(todos);
+      }
 
-      console.log(todos);
+      remove(0, 1);
+      remove(2, 1);
+      add('Most recent todo');
     </script>
   </body>
 </html>
